# Amber

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
cmake/: targets.cmake
src/: CMakeLists.txt
src/client/: CMakeLists.txt
src/client/client/: CMakeLists.txt  api.hpp  application.cpp  application.hpp  breakpoints.cpp  breakpoints.hpp  configuration.cpp  configuration.hpp  disassembly.cpp  disassembly.hpp  gameboywidgets.cpp  gameboywidgets.hpp  path.hpp  path_win32.cpp  texture.cpp  texture.hpp
src/client/client-desktop/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt
src/lib/common/: CMakeLists.txt  addressmask.h  api.hpp  breakpointcondition.cpp  breakpointcondition.hpp  breakpointconditiontype.hpp  breakpointdescription.cpp  breakpointdescription.hpp  bytereader.cpp  bytereader.hpp  bytewriter.cpp  bytewriter.hpp  channeldescription.cpp  channeldescription.hpp  common.natvis  cpuhelper.hpp  debugger.cpp  debugger.hpp  disassembly.cpp  disassembly.hpp  exception.cpp  exception.hpp  instructionbuilder.hpp  instructionset.hpp  memory.h  memory.hpp  memorymapping.hpp  mmu.h  mmu.hpp  ram.h  ram.hpp  recordable.hpp  recorder.cpp  recorder.hpp  recorderchanneldescription.cpp  recorderchanneldescription.hpp  recorderdescription.cpp  recorderdescription.hpp  recordermemberdescription.cpp  recordermemberdescription.hpp  (+6 more)
src/lib/gameboy/: CMakeLists.txt  api.hpp  basiccartridge.cpp  basiccartridge.hpp  cartridge.cpp  cartridge.hpp  cartridgeheader.cpp  cartridgeheader.hpp  cartridgeloader.cpp  cartridgeloader.hpp  cartridgetype.hpp  cpu.cpp  cpu.hpp  debugger.cpp  debugger.hpp  device.cpp  device.hpp  devicedescription.cpp  devicedescription.hpp  disassembly.cpp  disassembly.hpp  event.hpp  extendedinstruction.hpp  extendedopcode.hpp  gameboy.natvis  gameboytype.hpp  instruction.hpp  instructionbuilder.hpp  joypad.cpp  joypad.hpp  joypadbutton.hpp  lcdmode.hpp  mbc1cartridge.cpp  mbc1cartridge.hpp  mbc2cartridge.cpp  mbc2cartridge.hpp  mmu.cpp  mmu.hpp  opcode.hpp  pixel.cpp  (+15 more)
src/lib/imgui/: CMakeLists.txt  imgui_memory_editor.h
src/test/: CMakeLists.txt
src/test/common/: CMakeLists.txt  addressmask.cpp  bytereader.cpp  bytewriter.cpp  ram.cpp  recorder.cpp
src/test/gameboy/: CMakeLists.txt  instruction_add.cpp
src/test/main/: CMakeLists.txt  main.cpp
